# dwca-tools

./: CI_FIX_SUMMARY.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  TODO.md  docker-compose.yml  pyproject.toml
.claude/: CLAUDE.md
.claude/docs/snapshots/: best-practices.hash  best-practices.md  memory.hash  memory.md  skills.hash  skills.md  sub-agents.hash  sub-agents.md
.claude/planning/: performance-improvements.md
.claude/rules/: git-conventions.md  planning-and-verification.md  writing-style.md
.github/workflows/: test.yml
docs/: INATURALIST_SUPPORT.md  TEST_ARCHIVES_PLAN.md
docs/claude/planning/: species-command-plan.md
reference/: gbif_datasets.txt  gbif_predicates.md  gbif_taxon_keys.txt  predicate_north_america.json  tricky_species.tsv
scripts/: gbif-download.py  generate_test_fixture.py  oregon_butterflies.sh  oregon_butterfly_taxon_keys.txt  tricky_species_comparison.sh  tricky_species_taxon_keys.txt  vermont_species.txt  vermont_workflow.sh
src/dwca_tools/: __init__.py  aggregate.py  cli.py  config.py  convert.py  core.py  db.py  download.py  queries.py  schemas.py  settings.py  summarize.py  taxa.py  utils.py
src/dwca_tools/inaturalist/: __init__.py  downloader.py  extractor.py  models.py
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_convert.py  test_core.py  test_download.py  test_inaturalist_models.py  test_models.py  test_smoke.py  test_summarize.py
